<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".SortingRouteActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spnChonSo"
            style="@style/my_spinner"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:layout_margin="2dp"
            android:background="@drawable/spinner_selector"
            android:prompt="@string/ChonSoGCS_prompt" />

        <Button
            android:id="@+id/btnChooseFile"
            style="@style/my_button"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:textSize="18sp"
            android:background="@drawable/blue_button"
            android:onClick="btnChooseFile_Click"
            android:text="Chọn Sổ" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/table_header"
        android:orientation="horizontal" >

        <TextView
            style="@style/txtStyle"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="STT"
            android:textColor="#FFFFFF" />

        <TextView
            style="@style/txtStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="Số công tơ"
            android:textColor="#FFFFFF" />

        <TextView
            style="@style/txtStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="Mã cột"
            android:textColor="#FFFFFF" />

        <TextView
            style="@style/txtStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="BCS"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <ListView
        android:id="@+id/lsvSortingRoute"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:listSelector="@android:color/darker_gray" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginTop="5dp">

        <EditText
            android:id="@+id/etxtSTT"
            style="@style/my_edittext"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="3dp"
            android:layout_weight="4"
            android:textSize="18sp"
            android:background="@drawable/etxt_selector"
            android:inputType="number" />

        <Button
            android:id="@+id/btnChangePosition"
            style="@style/my_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:background="@drawable/blue_button"
            android:onClick="btnChangePosition_Click"
            android:text="Đổi vị trí" />
        
        <Button
            android:id="@+id/btnPrevPosition"
            style="@style/my_button"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:textSize="18sp"
            android:background="@drawable/blue_button"
            android:onClick="btnPrevPosition_Click"
            android:text="V.trí trước" />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5" >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tvInfoStyle"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="No C.Tơ" />

                    <TextView
                        android:id="@+id/tv_SERY_CTO"
                        style="@style/tvInfoStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tvInfoStyle"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="Mã trạm" />

                    <TextView
                        android:id="@+id/tv_MA_TRAM"
                        style="@style/tvInfoStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tvInfoStyle"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/MA_GC_lbl" />

                    <TextView
                        android:id="@+id/tv_MA_GC"
                        style="@style/tvInfoStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tvInfoStyle"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/MA_COT_lbl" />

                    <TextView
                        android:id="@+id/tv_MA_COT"
                        style="@style/tvInfoStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tvInfoStyle"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/TEN_KH_lbl" />

                    <TextView
                        android:id="@+id/tv_TEN_KH"
                        style="@style/tvInfoStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tvInfoStyle"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="Địa chỉ" />

                    <TextView
                        android:id="@+id/tv_DIA_CHI"
                        style="@style/tvInfoStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/tvInfoStyle"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="Bộ chỉ số" />

                    <TextView
                        android:id="@+id/tv_LOAI_BCS"
                        style="@style/tvInfoStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:textSize="18sp"
                        android:layout_weight="1"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSaveRoute"
            style="@style/my_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:onClick="btnSaveRoute_Click"
            android:textSize="18sp"
            android:text="Lưu sắp xếp" />

        <Button
            android:id="@+id/btnSortingRoute"
            style="@style/my_button"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@drawable/blue_button"
            android:onClick="btnSortingRoute_Click"
            android:textSize="18sp"
            android:text="Xóa lộ trình" />
    </LinearLayout>

</LinearLayout>